fixed header misalignment, new max width for gallery only

--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -37,6 +37,12 @@
 }
 
 .main-gallery {
+	.row {
+		@media #{$medium-only} {
+			max-width: 90rem !important;
+		}
+	}
+
 	margin: 0;
 	margin-bottom: 75px;
 }
