--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -40,9 +40,17 @@
 
 	a {
 		font-weight: 700 !important;
-		font-size: 17px !important;
+		font-size: 16px !important;
 		//color: rgba(243, 232, 232, 0.7) !important;
 		color: rgba(10, 10, 10, 0.7) !important;
+		
+		@media #{$large-only} {
+			padding: 0 10px !important;
+		}
+		
+		@media #{$medium-only} {
+			padding: 0 7px !important;
+		}
 
 		&.active, &:hover {
 			//border-bottom: 2px solid $white;
